# SDiZO-projekt-2

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  DijkstraMatrix.txt  KruskalMatrix.txt  MST.txt  PrimList.txt  WykresyAsia.xlsx  Zeszyt1.xlsx  build.ninja  cmake_install.cmake  path.txt  pathnaszdotestow .txt  resultsD.txt  resultsU.txt
Algorithms/: BellmanFord.cpp  BellmanFord.h  Dijkstra.cpp  Dijkstra.h  Join.cpp  Join.h  Kruskal.cpp  Kruskal.h  Prim.cpp  Prim.h
Graph/: GraphList.cpp  GraphList.h  GraphMatrix.cpp  GraphMatrix.h
Menu/: MST.cpp  MST.h  Main.cpp  ShortestPathMenu.cpp  ShortestPathMenu.h
Time/: AutomaticTest.cpp  AutomaticTest.h  Time.cpp  Time.h
